[gd_scene load_steps=35 format=3 uid="uid://b3yxvmw1fmgb4"]

[ext_resource type="Script" uid="uid://b62ppvc03a6b1" path="res://Assets/Scripts/CameraManager.gd" id="1_6g8w3"]
[ext_resource type="Script" uid="uid://bri0ar82vcsyc" path="res://Prefab scenes/player.gd" id="1_noymn"]
[ext_resource type="ArrayMesh" uid="uid://c27o2arf8nixo" path="res://Assets/Meshes/Prototype_Ship.obj" id="3_wdjqe"]
[ext_resource type="Material" uid="uid://c8dtnmdyqw1as" path="res://Assets/Materials/Ships/Body.tres" id="4_s3mmj"]
[ext_resource type="Material" uid="uid://dtu5xtqw54qjc" path="res://Assets/Materials/Ships/Wings.tres" id="5_4dwc2"]
[ext_resource type="Material" uid="uid://xufxqc2vhosk" path="res://Assets/Materials/Ships/Engines.tres" id="6_3nhkb"]
[ext_resource type="Material" uid="uid://cvy2wx33hf6xg" path="res://Assets/Materials/Ships/Energy.tres" id="7_hlptu"]
[ext_resource type="Script" uid="uid://dufmvqfvv8eiu" path="res://Assets/Scripts/base_body.gd" id="8_3klbm"]
[ext_resource type="Curve" uid="uid://cnnxrc2knraje" path="res://Assets/Curves/ParticleSizeCurve.tres" id="9_fjc0j"]
[ext_resource type="Curve" uid="uid://bqxjimb8xlki1" path="res://Assets/Curves/EngineLightCurve.tres" id="10_u6sl3"]
[ext_resource type="CylinderMesh" uid="uid://cx3jhed4ffdac" path="res://Assets/Materials/EngineConeMesh.tres" id="11_d88wy"]
[ext_resource type="TubeTrailMesh" uid="uid://cwrrdycqgiivo" path="res://Assets/Materials/TrailMesh.tres" id="12_3v4re"]
[ext_resource type="Curve" uid="uid://ds8st4sx4ftrj" path="res://Assets/Curves/dampingCurve.tres" id="13_sbht4"]
[ext_resource type="Curve" uid="uid://b4kq1ut5oqcmq" path="res://Assets/Curves/EngineTrailScaleCurve.tres" id="14_g5sqv"]
[ext_resource type="Script" uid="uid://w2iurlb7divh" path="res://Assets/Scripts/PlayerStateMachine/ShipStateMachine.gd" id="15_8u0bd"]
[ext_resource type="Resource" uid="uid://y2vkkuwjl833" path="res://Assets/Scripts/Resources/BaseShipResource.tres" id="16_eg0uq"]
[ext_resource type="Script" uid="uid://e07chentfdx1" path="res://Assets/Scripts/PlayerStateMachine/Flying.gd" id="17_cjp2j"]
[ext_resource type="Script" uid="uid://nalshrhltoq6" path="res://Assets/Scripts/PlayerStateMachine/Hovering.gd" id="18_0pqif"]
[ext_resource type="Curve" uid="uid://ctbfowvcgr80h" path="res://Assets/Curves/FallingDampingCurve.tres" id="19_xar0q"]
[ext_resource type="Script" uid="uid://dl7b0pk1wtb5i" path="res://Assets/Scripts/PlayerStateMachine/Air_Boost.gd" id="20_2e02x"]
[ext_resource type="Script" uid="uid://1tjhfsykqpp3" path="res://Assets/Scripts/PlayerStateMachine/Drift.gd" id="21_opfna"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0v85l"]
height = 1.31981
radius = 1.91406

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_cgw0f"]
length = 2.709

[sub_resource type="SphereShape3D" id="SphereShape3D_smq6u"]

[sub_resource type="Curve" id="Curve_guwfi"]
_data = [Vector2(0, 0), 0.0, 1.23332, 0, 1, Vector2(0.620401, 0.765156), 1.23332, 2.28507, 1, 0, Vector2(1, 1), 0.116448, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_ilw7v"]
_limits = [0.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 200), 0.0, -64.3081, 0, 1, Vector2(1, 135.692), -64.3081, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_y725d"]
_data = [Vector2(0, 0), 0.0, 9.45161, 0, 1, Vector2(0.105802, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_ktdep"]
_data = [Vector2(0, 1), 0.0, -0.691922, 0, 1, Vector2(1, 0.308078), -0.691922, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_0hif8"]
_data = [Vector2(0, 1), 0.0, -0.691922, 0, 1, Vector2(1, 0.308078), -0.691922, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_751v6"]
_data = [Vector2(0, 0.658109), 0.0, 3.13044, 0, 1, Vector2(0.109215, 1), 3.13044, 0.0, 1, 0, Vector2(1, 0.312148), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_m8k8q"]
colors = PackedColorArray(1, 1, 1, 0.509804, 1, 0.813333, 0.68, 0.0196078)

[sub_resource type="Gradient" id="Gradient_2ifmk"]
offsets = PackedFloat32Array(0, 0.130357, 1)
colors = PackedColorArray(1, 1, 1, 0.0392157, 1, 1, 1, 0.254902, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_paeve"]
_limits = [0.0, 1.0, 0.0, 2.5]
_data = [Vector2(0.0819672, 0.115938), 0.0, 0.510407, 0, 0, Vector2(1.87705, 1), 0.0625179, 0.0, 0, 0]
point_count = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_noymn"]
properties/0/path = NodePath(".:playerTransform")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:engine_cone_top_rad")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:engine_cone_height")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:trails_scale_min")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:trails_scale_max")
properties/4/spawn = true
properties/4/replication_mode = 1

[node name="PlayerContainer" type="Node"]
script = ExtResource("1_noymn")

[node name="PlayerProxy" type="CharacterBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)
collision_layer = 2
floor_max_angle = 0.872665

[node name="ShipCollider" type="CollisionShape3D" parent="PlayerProxy"]
transform = Transform3D(0.62, 0, 0, 0, 0.62, 0, 0, 0, 0.62, 0, 0, 0)
shape = SubResource("CylinderShape3D_0v85l")
disabled = true
debug_color = Color(0, 0.595, 0.7, 0.858824)

[node name="GroundedRayCollider" type="CollisionShape3D" parent="PlayerProxy"]
transform = Transform3D(0.62, 0, 4.44089e-16, 0, -2.71011e-08, -0.62, 0, 0.62, -2.71011e-08, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_cgw0f")
disabled = true

[node name="Player" type="CharacterBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)
collision_layer = 2
floor_max_angle = 0.872665

[node name="RayCast3D" type="RayCast3D" parent="Player"]
transform = Transform3D(1, 0, -1.49012e-08, 0, 1, 0, 1.49012e-08, 0, 1, 0, 0, 0)
target_position = Vector3(0, -2, 0)

[node name="ShipCollider" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.62, 0, 0, 0, 0.62, 0, 0, 0, 0.62, 0, 0, 0)
shape = SubResource("CylinderShape3D_0v85l")
debug_color = Color(0, 0.595, 0.7, 0.858824)

[node name="GroundedRayCollider" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.62, 0, 0, 0, -2.71011e-08, -0.62, 0, 0.62, -2.71011e-08, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_cgw0f")

[node name="CameraManager" type="Node3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, -1.49012e-08, 0, 1, 0, 1.49012e-08, 0, 1, 0, -1, 0)
script = ExtResource("1_6g8w3")

[node name="Arm" type="SpringArm3D" parent="Player/CameraManager"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 2.32515, -0.0321627)
shape = SubResource("SphereShape3D_smq6u")
spring_length = 6.0
margin = 0.5

[node name="MockCamera" type="Camera3D" parent="Player/CameraManager/Arm"]
unique_name_in_owner = true
physics_interpolation_mode = 1
transform = Transform3D(1, -1.38767e-05, 7.97361e-05, 3.42131e-05, 0.965314, -0.261093, -7.33584e-05, 0.261093, 0.965315, 0.000976563, -0.555679, 3.04504)

[node name="ShipContainer" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 1.6204e-08, 0, 1, 0, -1.6204e-08, 0, 1, 0, 0, 0)
mesh = ExtResource("3_wdjqe")
surface_material_override/0 = ExtResource("4_s3mmj")
surface_material_override/1 = ExtResource("5_4dwc2")
surface_material_override/2 = ExtResource("6_3nhkb")
surface_material_override/3 = ExtResource("7_hlptu")
script = ExtResource("8_3klbm")
ParticleSizeCurve = ExtResource("9_fjc0j")
EngineLightCurve = ExtResource("10_u6sl3")
EngineConeCurve = SubResource("Curve_guwfi")
EngineLightIntensity = 3.625
EngineLightEnergy = 3.0

[node name="LookAtTarget" type="Node3D" parent="Player/ShipContainer"]
unique_name_in_owner = true
transform = Transform3D(1, 0, -4.47035e-08, 0, 1, 0, 4.47035e-08, 0, 1, 0, 0, -22.9769)

[node name="HeadLight" type="SpotLight3D" parent="Player/ShipContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.10352e-05, 0, -2.0842)
visible = false
light_energy = 3.315
light_specular = 0.2
distance_fade_begin = 4.95
distance_fade_length = 6.1
spot_range = 91.341
spot_attenuation = -0.11
spot_angle = 59.21
spot_angle_attenuation = 1.1487

[node name="OmniLights" type="Node3D" parent="Player/ShipContainer"]
transform = Transform3D(1, 0, -1.49012e-08, 0, 1, 0, 1.49012e-08, 0, 1, 0, 0, 0)

[node name="TailLight" type="OmniLight3D" parent="Player/ShipContainer/OmniLights"]
transform = Transform3D(1, 0, 1.49012e-08, 0, 1, 0, -1.49012e-08, 0, 1, -6.10352e-05, -0.207854, 0.43457)
light_color = Color(1, 0.802444, 0.66258, 1)
light_specular = 0.25
omni_range = 15.851
omni_attenuation = -0.032
omni_shadow_mode = 0

[node name="EngineLights" type="Node3D" parent="Player/ShipContainer"]
transform = Transform3D(0.2299, 0, 0, 0, 0.2299, 0, 0, 0, 0.2299, 0, 0, 0)

[node name="EngineLight_L" type="SpotLight3D" parent="Player/ShipContainer/EngineLights"]
transform = Transform3D(-4.34972, 0, 4.17233e-07, 0, 4.34972, 0, -3.57628e-07, 0, -4.34972, -3.72844, 0, 3.53577)
light_color = Color(1, 0.636765, 0.30254, 1)
spot_range = 8.85
spot_angle = 61.58

[node name="EngineLight_R" type="SpotLight3D" parent="Player/ShipContainer/EngineLights"]
transform = Transform3D(-4.34972, 0, 3.57628e-07, 0, 4.34972, 0, -3.57628e-07, 0, -4.34972, 3.728, 0, 3.536)
light_color = Color(1, 0.636765, 0.30254, 1)
spot_range = 8.85
spot_angle = 61.58

[node name="EngineCones" type="Node3D" parent="Player/ShipContainer"]
transform = Transform3D(1, 0, -1.49012e-08, 0, 1, 0, 1.49012e-08, 0, 1, 0, 0, 0)

[node name="EngineCone_L" type="CPUParticles3D" parent="Player/ShipContainer/EngineCones"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.918339, -1.93777e-08, 1.23789)
local_coords = true
mesh = ExtResource("11_d88wy")
particle_flag_align_y = true
direction = Vector3(0, -1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.1
initial_velocity_max = 0.1
linear_accel_min = 0.01
linear_accel_max = 0.01
linear_accel_curve = SubResource("Curve_ilw7v")
scale_amount_curve = SubResource("Curve_y725d")
split_scale = true
scale_curve_x = SubResource("Curve_ktdep")
scale_curve_y = SubResource("Curve_0hif8")
scale_curve_z = SubResource("Curve_751v6")
color = Color(1, 0.69912, 0.378778, 1)
color_ramp = SubResource("Gradient_m8k8q")

[node name="EngineCone_R" type="CPUParticles3D" parent="Player/ShipContainer/EngineCones"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.918, 0, 1.238)
local_coords = true
mesh = ExtResource("11_d88wy")
particle_flag_align_y = true
direction = Vector3(0, -1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.1
initial_velocity_max = 0.1
linear_accel_min = 0.01
linear_accel_max = 0.01
linear_accel_curve = SubResource("Curve_ilw7v")
scale_amount_curve = SubResource("Curve_y725d")
split_scale = true
scale_curve_x = SubResource("Curve_ktdep")
scale_curve_y = SubResource("Curve_0hif8")
scale_curve_z = SubResource("Curve_751v6")
color = Color(1, 0.69912, 0.378778, 1)
color_ramp = SubResource("Gradient_m8k8q")

[node name="Particles" type="Node3D" parent="Player/ShipContainer"]
transform = Transform3D(0.2299, 0, 0, 0, 0.2299, 0, 0, 0, 0.2299, 0, 0, 0)

[node name="EngineTrail_L" type="CPUParticles3D" parent="Player/ShipContainer/Particles"]
transform = Transform3D(0.707107, 1.49012e-08, -0.707107, 0.707107, -3.09086e-08, 0.707107, -1.49012e-08, -1, -4.47035e-08, -3.81274, 0, 6.89844)
amount = 60
lifetime = 0.5
mesh = ExtResource("12_3v4re")
gravity = Vector3(0, 0, 0)
damping_min = 0.1
damping_max = 0.3
damping_curve = ExtResource("13_sbht4")
scale_amount_curve = ExtResource("14_g5sqv")
color_ramp = SubResource("Gradient_2ifmk")

[node name="EngineTrail_R" type="CPUParticles3D" parent="Player/ShipContainer/Particles"]
transform = Transform3D(0.707107, 1.49012e-08, -0.707107, 0.707107, -3.09086e-08, 0.707107, -1.49012e-08, -1, -4.47035e-08, 3.813, 0, 6.898)
amount = 60
lifetime = 0.5
mesh = ExtResource("12_3v4re")
gravity = Vector3(0, 0, 0)
damping_min = 0.1
damping_max = 0.3
damping_curve = ExtResource("13_sbht4")
scale_amount_curve = ExtResource("14_g5sqv")
color_ramp = SubResource("Gradient_2ifmk")

[node name="Laser" type="Node" parent="Player"]

[node name="Missile" type="Node" parent="Player"]

[node name="ShipStateMachine" type="Node" parent="Player" node_paths=PackedStringArray("initialState")]
script = ExtResource("15_8u0bd")
easeOut = SubResource("Curve_paeve")
ship_stats = ExtResource("16_eg0uq")
initialState = NodePath("Hovering")

[node name="Flying" type="Node" parent="Player/ShipStateMachine" node_paths=PackedStringArray("Player", "ShipContainer")]
script = ExtResource("17_cjp2j")
Player = NodePath("../..")
ShipContainer = NodePath("../../ShipContainer")

[node name="Hovering" type="Node" parent="Player/ShipStateMachine" node_paths=PackedStringArray("Player", "ShipContainer", "floor_raycast")]
script = ExtResource("18_0pqif")
Player = NodePath("../..")
ShipContainer = NodePath("../../ShipContainer")
floor_raycast = NodePath("../../RayCast3D")
falling_damping_curve = ExtResource("19_xar0q")

[node name="Air_Drift" type="Node" parent="Player/ShipStateMachine"]

[node name="Air_Boost" type="Node" parent="Player/ShipStateMachine"]
script = ExtResource("20_2e02x")

[node name="Drift" type="Node" parent="Player/ShipStateMachine" node_paths=PackedStringArray("Player", "proxy", "ShipContainer", "floor_raycast")]
script = ExtResource("21_opfna")
Player = NodePath("../..")
proxy = NodePath("../../../PlayerProxy")
ShipContainer = NodePath("../../ShipContainer")
floor_raycast = NodePath("../../RayCast3D")
falling_damping_curve = ExtResource("19_xar0q")

[node name="Boost" type="Node" parent="Player/ShipStateMachine"]

[node name="AscendCharge" type="Node" parent="Player/ShipStateMachine"]

[node name="PawnSync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_noymn")
